[gd_scene format=3 uid="uid://dt5ehreysd1jm"]

[ext_resource type="Texture2D" uid="uid://u68qewrnd6y2" path="res://Img/Спра1131йт-0001.png" id="1_5qdi1"]
[ext_resource type="Script" uid="uid://chlcnd32w3tk6" path="res://Scripts/bullet_enemy.gd" id="1_sss55"]
[ext_resource type="Texture2D" uid="uid://dvd75lutumfve" path="res://Img/bullettype1/bultype2-001031.png" id="3_8do20"]
[ext_resource type="Texture2D" uid="uid://b35rfnabrt4vq" path="res://Img/bullettype1/bultype2-001032.png" id="4_jjiwl"]
[ext_resource type="Texture2D" uid="uid://d2efnrsyn7clj" path="res://Img/bullettype1/bultype2-001033.png" id="5_h4k5r"]
[ext_resource type="Texture2D" uid="uid://r6bpv64r47sw" path="res://Img/bullettype2/bultype2-00101.png" id="6_rjjs7"]
[ext_resource type="Texture2D" uid="uid://cvimn3ifmvaqw" path="res://Img/bullettype2/bultype2-00102.png" id="7_pkewr"]
[ext_resource type="Texture2D" uid="uid://ymq5q5vf3wu6" path="res://Img/bullettype2/bultype2-00103.png" id="8_vinls"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sss55"]
radius = 5.0
height = 28.0

[sub_resource type="SpriteFrames" id="SpriteFrames_8do20"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8do20")
}, {
"duration": 1.0,
"texture": ExtResource("4_jjiwl")
}, {
"duration": 1.0,
"texture": ExtResource("5_h4k5r")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_jjiwl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_rjjs7")
}, {
"duration": 1.0,
"texture": ExtResource("7_pkewr")
}, {
"duration": 1.0,
"texture": ExtResource("8_vinls")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="BulletEnemy" type="Area2D" unique_id=1928292457]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_sss55")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=165020257]
visible = false
scale = Vector2(0.09375001, 0.09375001)
texture = ExtResource("1_5qdi1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=2020110784]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_sss55")

[node name="AnimatedSprite2Dtype1" type="AnimatedSprite2D" parent="." unique_id=387251735]
scale = Vector2(0.046875, 0.046875)
sprite_frames = SubResource("SpriteFrames_8do20")
autoplay = "default"
frame = 2
frame_progress = 1.0

[node name="AnimatedSprite2Dtype2" type="AnimatedSprite2D" parent="." unique_id=1218442879]
visible = false
scale = Vector2(0.0625, 0.0625)
sprite_frames = SubResource("SpriteFrames_jjiwl")
autoplay = "default"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
